# SignaturePro

./: CMakeLists.txt  README_wxWidgets.md  build_wxwidgets.sh
.github/workflows/: nightly.yml  release.yml
docs/: ACTUALIZACION_DOCS.md  ARQUITECTURA_SIMPLE.md  CHANGELOG.md  CONFIGURACION_MACOS_COMPLETADA.md  CONSTRUCCION_MACOS_APP.md  DIAGRAMAS_ARQUITECTURA.md  DOCUMENTACION_COMPLETA.md  GUIA_DESARROLLO.md  GUIA_TAREAS_VSCODE.md  GUIA_USO_TEMA_OSCURO.md  PROBLEMAS_RESUELTOS.md  README.md  RELEASE_MACOS.md  RESUMEN_EJECUTIVO.md  SOLUCION_PROBLEMAS.md  TEMA_OSCURO_IMPLEMENTADO.md
resources/: signature.icns
resources/macos/: Info.plist
scripts/: README.md  build-macos-app.sh  build.sh  create-dmg.sh  dmg_setup.scpt  project-info.sh  run.sh  sign-and-notarize.sh
src/: constants.hpp  ejemplo_uso_modular.cpp  include.hpp  logger.hpp  main.cpp  modal_dialog.cpp  my_app.cpp  my_app.hpp  my_frame.cpp  my_frame.hpp  sdl3_manager.cpp  sdl3_manager.hpp  second_frame.cpp  wxwidgets_simple.cpp
src/config/: constants.hpp  logger.cpp  logger.hpp  theme.hpp
src/controllers/: app_controller.cpp  app_controller.hpp
src/data/models/: application_config.cpp  application_config.hpp
src/data/repositories/: application_repository.cpp  application_repository.hpp
src/domain/entities/: application.cpp  application.hpp
src/domain/repositories/: application_repository.hpp
src/domain/usecases/: initialize_application.cpp  initialize_application.hpp
src/presentation/: my_app.cpp  my_app.hpp
src/presentation/controllers/: application_controller.cpp  application_controller.hpp
src/presentation/screens/: modal_dialog.cpp  modal_dialog.hpp  my_frame.cpp  my_frame.hpp  second_frame.cpp  second_frame.hpp
src/services/: logging_service.cpp  logging_service.hpp
src/ui/: modal_dialog.cpp  my_frame.cpp  second_frame.cpp
